--- a/style.css
+++ b/style.css
@@ -29,3 +29,18 @@ body {
 .quote-text {
   font-size: 2.75rem;
 }
+
+
+.fa-quote-left {
+  font-size: 4rem;
+}
+
+.quote-author {
+  margin-top: 15px;
+  font-size: 2rem;
+  font-weight: 400;
+  font-style: italic;
+}
+
+
+/* Media Query: Tablet or Smaller */
