--- a/style.css
+++ b/style.css
@@ -42,5 +42,53 @@ body {
   font-style: italic;
 }
 
+.button-container {
+  margin-top: 15px;
+  display: flex;
+  justify-content: space-between;
+}
 
-/* Media Query: Tablet or Smaller */
+
+button {
+  cursor: pointer;
+  font-size: 1.2rem;
+  height: 2.5rem;
+  border: none;
+  border-radius: 10px;
+  color: #fff;
+  background: #333;
+  outline: none;
+  padding: 0.5rem 1.8rem;
+  box-shadow: 0 0.3rem rgba(121, 121, 121, 0.65);
+
+
+}
+
+button:hover {
+  filter: brightness(150%);
+}
+
+button:active {
+  transform: translate(0, 0.3rem);
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+}
+
+.twitter-button {
+  color: #38a1f3;
+
+}
+
+.fa-twitter {
+  font-size: 1.5rem;
+}
+ /* Media Query: Tablet or Smaller */
+  @media  screen and (max-width: 1000px)  {
+    .quote-container {
+      margin: auto 10px;
+    }
+
+    .quote-text {
+      font-size: 2.5rem;
+    }
+  }
+  
