--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ button:active {
 /* Loader */
 .loader {
   border: 16px solid #f3f3f3; /* Light grey */
-  border-top: 16px solid #333
+  border-top: 16px solid #333;
   border-radius: 50%;
   width: 120px;
   height: 120px;
